Apply ui-router into use ADD use ui-router ADD Split ui into separate templates FIX simplify boot logic FIX Table columns jumping

--- a/app/assets/stylesheets/gi_album/engine.css
+++ b/app/assets/stylesheets/gi_album/engine.css
@@ -13,3 +13,16 @@
  *= require_tree .
  *= require_self
  */
+
+table-fixed {
+  table-layout: fixed;
+}
+
+table-fixed th:nth-child(1), td:nth-child(1) {
+  overflow: hidden;
+  width: 50%;
+}
+table-fixed th:nth-child(2), td:nth-child(2) {
+  overflow: hidden;
+  width: 50%;
+}
